fixed overlapping icon over text

--- a/src/common/home/home.css
+++ b/src/common/home/home.css
@@ -729,7 +729,7 @@
           opacity: 0;
           transition: all 0.2s ease-in-out;
           position: absolute; 
-          left: 15.3rem;
+          left: 15rem;
         }
       }
       .prime-sponsors-cta:hover {
